--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -8,7 +8,7 @@ redirect_from:
 ---
 
 {% include base_path %}
-I want to start writing more. It helps organize my thoughts. As a PhD student (especially one working in AI at the moment), the amount of information that you want/have to process just to keep up can be overwhelming. A lot of ideas come to mind and it becomes challenging to figure out which one to work on. Writing things down has made me realize that a lot of these ideas are often not disjoint, a lot of my seemingly huge TODOs are not that huge. Therefore, it is worth the effort of a weekend to write down your current understanding of things, to focus on what's important from a long term perspective. 
+I want to start writing more. It helps organize my thoughts. As a PhD student (especially one working in AI at the moment), the amount of information that you want/have to process just to keep up can be overwhelming. A lot of ideas come to mind and it becomes challenging to figure out which one to work on. Writing things down has made me realize that a lot of these ideas are often not disjoint, a lot of my seemingly huge TODOs are not that huge. Therefore, it is worth the effort of a weekend to write down your current understanding of things, to focus on what's important from a long term perspective. <br>
 
 If I come up with something that could also be helpful to others, I will try to make it more professional and post a link here.
 <!-- {% capture written_year %}'None'{% endcapture %}
